--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ h2 {
     font-size: 1rem;
     font-weight: 500;
     position: relative;
-    transition: color 0.3s ease;
+    transition: none;
 }
 
 /* Hover efekti */
@@ -111,7 +111,7 @@ h2 {
     width: 0%;
     height: 2px;
     background-color: hsl(0, 100%, 50%);
-    
+    transition: width 0.3s ease;
 }
 
 .nav-links a:hover {
